--- a/references.bib
+++ b/references.bib
@@ -1,4 +1,88 @@
 %% USE BIBTEX ENTRIES FROM INSPIRE, NO SELF-INVENTED SHORT NAMES!
+%% Farrar 2014
+@article{FARRAR_2014,
+title = {The Galactic magnetic field and ultrahigh-energy cosmic ray deflections},
+journal = {Comptes Rendus Physique},
+volume = {15},
+number = {4},
+pages = {339-348},
+year = {2014},
+note = {Ultra-high-energy cosmic rays: From the ankle to the tip of the spectrum},
+issn = {1631-0705},
+doi = {https://doi.org/10.1016/j.crhy.2014.04.002},
+url = {https://www.sciencedirect.com/science/article/pii/S1631070514000498},
+author = {Glennys R. Farrar},
+keywords = {UHECR, Galactic magnetic field, Magnetic deflections, RCUHE, Champs magnétique galactique, Déflexions magnétiques},
+abstract = {Our understanding of the Galactic magnetic field (GMF) has increased considerably in recent years, while at the same time remaining far from adequate. By way of illustration, the Jansson and Farrar (2012) (JF12) GMF model is described, emphasizing how it is constrained and which features are robust or likely to change, as modeling and constraining data improve. The most urgent requirements for the next phase of modeling are a more realistic model for the relativistic electron distribution (in order to reduce the systematic error associated with interpreting synchrotron data) and a better theoretical understanding of the origin of the large-scale coherent field (in order to develop a better phenomenological parameterization of the field). Even in its current stage of development, the JF12 model allows some important conclusions about UHECR deflections in the GMF to be formulated.}
+}
+%% ICRC 2019
+@article{ICRC_2019,
+  author = "Caccianiga, Lorenzo",
+  title = "{Anisotropies of the Highest Energy Cosmic-ray Events Recorded by the Pierre Auger Observatory in 15 years of Operation}",
+  doi = "10.22323/1.358.0206",
+  journal = "PoS",
+  year = 2019,
+  volume = "ICRC2019",
+  pages = "206"
+}
+%% Auger 2018
+@article{Auger_Starburst2018,
+   title={An Indication of Anisotropy in Arrival Directions of Ultra-high-energy Cosmic Rays through Comparison to the Flux Pattern of Extragalactic Gamma-Ray Sources},
+   volume={853},
+   ISSN={2041-8213},
+   url={http://dx.doi.org/10.3847/2041-8213/aaa66d},
+   DOI={10.3847/2041-8213/aaa66d},
+   number={2},
+   journal={The Astrophysical Journal},
+   publisher={American Astronomical Society},
+   author={Aab, A. and Abreu, P. and Aglietta, M. and Albuquerque, I. F. M. and Allekotte, I. and Almela, A. and Castillo, J. Alvarez and Alvarez-Muñiz, J. and Anastasi, G. A. and Anchordoqui, L. and et al.},
+   year={2018},
+   month={Feb},
+   pages={L29}
+}
+
+%%AMS 2014
+@article{AMS_2014,
+  title={Precision measurement of the (e++ e-) flux in primary cosmic rays from 0.5 GeV to 1 TeV with the Alpha Magnetic Spectrometer on the International Space Station},
+  author={Aguilar, M and Aisa, D and Alpat, B and Alvino, A and Ambrosi, G and Andeen, K and Arruda, L and Attig, N and Azzarello, P and Bachlechner, A and others},
+  journal={Physical review letters},
+  volume={113},
+  number={22},
+  pages={221102},
+  year={2014},
+  publisher={APS}
+}
+%% Dampe
+@article{Dampe_2017,
+   title={Direct detection of a break in the teraelectronvolt cosmic-ray spectrum of electrons and positrons},
+   author={Ambrosi, G.and DAMPE Collaboration},
+   volume={552},
+   ISSN={1476-4687},
+   url={http://dx.doi.org/10.1038/nature24475},
+   DOI={10.1038/nature24475},
+   number={7683},
+   journal={Nature},
+   publisher={Springer Science and Business Media LLC},
+   year={2017},
+   month={Nov},
+   pages={63–66}
+}
+%% Calet
+@article{Calet_2017,
+   title={Energy Spectrum of Cosmic-Ray Electron and Positron from 10 GeV to 3 TeV Observed with the Calorimetric Electron Telescope on the International Space Station},
+   volume={119},
+   ISSN={1079-7114},
+   url={http://dx.doi.org/10.1103/PhysRevLett.119.181101},
+   DOI={10.1103/physrevlett.119.181101},
+   number={18},
+   journal={Physical Review Letters},
+   publisher={American Physical Society (APS)},
+   author={Adriani, O. and Akaike, Y. and Asano, K. and Asaoka, Y. and Bagliesi, M. G. and Bigongiari, G. and Binns, W. R. and Bonechi, S. and Bongi, M. and Brogi, P. and et al.},
+   year={2017},
+   month={Nov}
+}
+
+%% 
 %% Sanriku 1999
 @inproceedings{Sanriku_1999,
   title={High energy cosmic-ray electrons beyond 100 GeV},
@@ -56,6 +140,22 @@
   year={2010},
   publisher={APS}
 }
+
+%% FERMI 2017
+@article{Fermi_2017,
+   title={Cosmic-ray electron-positron spectrum from 7 GeV to 2 TeV with the Fermi Large Area Telescope},
+   volume={95},
+   ISSN={2470-0029},
+   url={http://dx.doi.org/10.1103/PhysRevD.95.082007},
+   DOI={10.1103/physrevd.95.082007},
+   number={8},
+   journal={Physical Review D},
+   publisher={American Physical Society (APS)},
+   author={Abdollahi, S. and Ackermann, M. and Ajello, M. and Atwood, W. B. and Baldini, L. and Barbiellini, G. and Bastieri, D. and Bellazzini, R. and Bloom, E. D. and Bonino, R. and et al.},
+   year={2017},
+   month={Apr}
+}
+
 %% HESS 2008
 @article{HESS_2008,
   title={HESS very-high-energy gamma-ray sources without identified counterparts},
@@ -441,14 +541,20 @@ archivePrefix = {arXiv},
 
 
 %% eROSITA
-
 @article{eROSITA,
-    author = {Predehl, P. and Sunyaev, R. and Becker, Werner and Brunner, Hermann and Burenin, R. and Bykov, A. and Cherepashchuk, A. and Chugai, N. and Churazov, E. and Doroshenko, Victor and Eismont, N. and Freyberg, M. and Gilfanov, M. and Haberl, F. and Khabibullin, I. and Krivonos, R. and Maitra, Chandreyee and Medvedev, Pavel and Merloni, A. and Wilms, J.},
-    year = {2020},
-    month = {12},
-    pages = {},
-    title = {Detection of large-scale X-ray bubbles in the Milky Way halo}
+    author = "Predehl, P. and others",
+    title = "{Detection of large-scale X-ray bubbles in the Milky Way halo}",
+    eprint = "2012.05840",
+    archivePrefix = "arXiv",
+    primaryClass = "astro-ph.GA",
+    doi = "10.1038/s41586-020-2979-0",
+    journal = "Nature",
+    volume = "588",
+    number = "7837",
+    pages = "227--231",
+    year = "2020"
 }
+
 %% Starlight Pol
 
 @article{Gina_2021,
