--- a/Archive/main_old.tex
+++ b/Archive/main_old.tex
@@ -1,16 +1,24 @@
+%\documentclass[12pt, a4 paper]{article}
 \documentclass[usenatbib]{mnras}
+%\documentclass{mnras}
 
 \usepackage{graphicx}
-\usepackage{amssymb}
-\usepackage{epstopdf}
+\usepackage{amsfonts}
 \usepackage{amsmath}
-\usepackage{comment,xcolor}
-\usepackage{hyperref}
+\usepackage{amssymb}
+\usepackage{geometry}
+\usepackage{epstopdf}
+%\usepackage{comment}
+\usepackage{xcolor}
+%\usepackage{hyperref}
 \usepackage{gensymb}
 \usepackage{xspace}
-\usepackage{array}
 \usepackage{cuted}
-\DeclareGraphicsRule{.tif}{png}{.png}{`convert #1 `dirname #1`/`basename #1 .tif`.png}
+\usepackage{float}
+
+%\usepackage{My_packages}
+%\usepackage[utf8]{inputenc}
+%\usepackage{xcolor}
 
 \definecolor{dg}{rgb}{0.0, 0.6, 0.1}
 \newcommand{\Andrew}[1]{\textcolor{dg}{#1}}
@@ -23,7 +31,7 @@
 \let\VANthebibliography\thebibliography
 \def\thebibliography{\DeclareRobustCommand{\VAN}[3]{##3}\VANthebibliography}
 
-\title{UHECR and the Galactic Halo Magnetic Field}
+\title{UHECR and the Halo Magnetic Field}
 
 \author[V.~Shaw et al.]{
 Vasundhara~Shaw,$^{1}$\thanks{E-mail: vasundhara.shaw@desy.de}
@@ -44,17 +52,8 @@ $^{1}$Deutsches Elektronen-Synchrotron, Platanenallee 6, Zeuthen, Germany
 \maketitle
 
 \begin{abstract}
-In the first part of our study, we consider synchrotron emission from electrons in the Galactic halo region. Utilising a simple analytical expression for the non-thermal electron distribution and a toy magnetic field model, we simulate polarised synchrotron emission maps at 30~GHz. By comparing these maps with observational data, we obtain constraints on our toy magnetic field model parameters. In the second half of our study, we use the range of values obtained for our magnetic field toy model, and determine the arrival directions and suppression factors of ultra high energy cosmic rays (UHECRs) from sources with different locations.
+blah.....
 \end{abstract}
-
-%\iffalse
-%\begin{titlepage}
-%    Paper Rough draft
-%\end{titlepage}
-%\fi
-
-%\tableofcontents
-%\newpage
 
 \section{Introduction}
 \label{Introducion}
@@ -65,6 +64,7 @@ The origin and structure of the Galactic magnetic field remains a long standing 
 %  tools used to detect magnetic fields namely RM and synchrotron. And typical values for these fields
 A variety of methods allow observational probes of Galactic magnetic fields, such as starlight polarisation and infrared emission from dust grains, or Zeeman splitting of spectral radio lines in the dust clouds \cite{Beck_2007}. Galactic magnetic fields are also probed by Pulsar dispersion with Faraday rotation, which is sensitive to the magnetic-field component parallel to the line of sight $B_{\parallel}$, and synchrotron radiation which probes the component perpendicular to the line of sight $B_{\perp}$. A major drawback in using the Pulsar dispersion measure along with the Faraday rotation measure method for probing Galactic magnetic fields is that it relies heavily on the lines of sight along which Pulsars are found, which places a strong focus on the regions close to the Galactic plane. Therefore, this method is of most use for probing the magnetic field in the Galactic disc region, and is not so useful for probing the magnetic field out in the Galactic halo. Synchrotron radiation on the other hand is produced via the gyration of non-thermal electrons along magnetic field lines. This method can thus be used to probe magnetic fields also in the Galactic halo.
 
+\Vasu{We should first talk about the Fermi observations and then SPASS and the model.}
 % Observations from Fermi 
 The observations from FERMI-LAT \cite{Su_2010} in the gamma ray regime unveiled giant bipolar gamma ray bubbles extending up to $\approx$~3~kpc radially and $\approx$~8~kpc in the z-direction, having a total energy of $\approx 10^{(54-55)}$~ergs. Recently, observations from eROSITA \cite{eROSITA} in X-ray regime further suggest existence of even larger bubbles going up to  $\approx$~7~kpc radially and $\approx$~14~kpc in the azimuthal direction, having a total energy of $\approx 10^{(56)}$~ergs. These observations strongly motivate the requirement of a magnetic field model focusing on the halo. Henceforth, for the sake of simplicity we will address the two bubbles together as the Galactic halo bubbles.
 
@@ -79,11 +79,11 @@ Several efforts have  been made in modelling magnetic fields in the Galaxy namel
 
 % Short note on non-thermal electron distribution.
 \Vasu{This paragraph needs more work}
-Apart from the Galactic magnetic field, our understanding of the non-thermal electron distribution in the Galaxy is also poor. We have some information on the distribution of cosmic ray electrons from the observations made by AMS01 \cite{AMS_2002} \& \cite{AMS_2014}, CALET \cite{Calet_2017}, DAMPE \cite{Dampe_2017}, CAPRICE94 \cite{CAPRICE_2001} , HEAT\cite{Heat_2001}, SANRIKU\cite{Sanriku_1999}, BETS\cite{Bets_2001}, PPT-BETS\cite{PPT_BETS}, ATIC-1-2\cite{AITC_1_2},H.E.S.S.\cite{HESS_2008}\cite{HESS_2009}, Fermi-LAT \cite{FERMI_2009}, \cite{FERMI_2010} \& \cite{Fermi_2017}, PAMELA \cite{Pamela}. Currently, there are a few ways to model the spatial distribution of these relativistic electrons; for example, with GALPROP \cite{Hammurabi} \cite{Orlando_2011} or the analytical WMAP model \cite{WMAP_Page}. The knowledge of non-thermal electrons is imperative in modelling Galactic magnetic field and generating synchrotron maps.  \Arjen{Perhaps this paragraph can be extended a bit. Why do we care about the non-thermal electron distribution when talking about the Galactic magnetic field? Why is our knowledge of the non-thermal electron distribution so poor? How can it be measured and how do the models that you mention relate to the measurements?} \Vasu{Currently working on it.}
+Apart from the Galactic magnetic field, our understanding of the non-thermal electron distribution in the Galaxy is also poor. We have some information on the distribution of cosmic ray electrons from the observations made by AMS01 \cite{AMS_2002} \& \cite{aguilar2014precision}, CALET \cite{Calet_2017}, DAMPE \cite{Dampe_2017}, CAPRICE94  \cite{CAPRICE_2001} , HEAT\cite{Heat_2001}, SANRIKU\cite{Sanriku_1999}, BETS\cite{Bets_2001}, PPT-BETS\cite{PPT_BETS}, ATIC-1-2\cite{AITC_1_2}, H.E.S.S.\cite{HESS_2008}\cite{HESS_2009}, Fermi-LAT \cite{FERMI_2009} \& \cite{FERMI_2010}, PAMELA \cite{Pamela}. Currently, there are a few ways to model the spatial distribution of these relativistic electrons; for example, with GALPROP \cite{Hammurabi} \cite{Orlando_2011} or the analytical WMAP model \cite{WMAP_Page}. The knowledge of non-thermal electrons is imperative in modelling Galactic magnetic field and generating synchrotron maps.  \Arjen{Perhaps this paragraph can be extended a bit. Why do we care about the non-thermal electron distribution when talking about the Galactic magnetic field? Why is our knowledge of the non-thermal electron distribution so poor? How can it be measured and how do the models that you mention relate to the measurements?} \Vasu{Currently working on it.}
 However, when modelling Galactic magnetic fields, Galactic cosmic ray electrons are not the only particles of interest. 
 
 % Importance of UHECRs
-The propagation of cosmic rays is vital to understand their sources, and this is in turn is limited by our understanding of the intervening magnetic fields. Unfortunately, both Galactic and extragalactic magnetic fields are presently poorly understood. Arrival direction of extragalactic cosmic rays (with energies higher than $\approx$~$10^{18}$), also known  as ultra high energy cosmic rays (UHECRs). These UHECRs are constituted by charged protons or nuclei, and therefore their origin directions are scrambled by the magnetic fields in the path between the source and earth. The paths of these UHECRs can, therefore, be drastically changed depending on the strength and geometry of the field. Different models of the Galactic magnetic field give vastly different predictions for the deflection of UHECRs (see e.g.~Ref.~ \cite{FARRAR_2014} \textcolor{blue}{ADD REF}). Recently, significant anisotropies in the UHECR sky have been discovered (see \cite{Auger_Starburst2018} \& \cite{ICRC_2019}. Due to the deflections in the Galactic magnetic fields, the interpretation of these results in terms of the localisation of the UHECR sources is extremely hard and hence, the knowledge of Galactic magnetic fields is extremely important. 
+The propagation of cosmic rays is vital to understand their sources, and this is in turn is limited by our understanding of the intervening magnetic fields. Unfortunately, both Galactic and extra-Galactic magnetic fields are presently poorly understood. Arrival direction of extra-galactic cosmic rays (with energies higher than $\approx$~$10^{18}$), also known  as ultra high energy cosmic rays (UHECRs). These UHECRs are constituted by charged protons or nuclei, and therefore their origin directions are scrambled by the magnetic fields in the path between the source and earth. The paths of these UHECRs can, therefore, be drastically changed depending on the strength and geometry of the field. Different models of the Galactic magnetic field give vastly different predictions for the deflection of UHECRs (see e.g.~Ref.~\textcolor{blue}{ADD REF}). Recently, significant anisotropies in the UHECR sky have been discovered~\textcolor{blue}{REFS TO DIPOLE/STARBURST CORRELATIONS/TA HOTSPOT}. Due to the deflections in the Galactic magnetic fields, the interpretation of these results in terms of the localisation of the UHECR sources is extremely hard and hence, the knowledge of Galactic magnetic fields is extremely important. 
 
 % Introduction to brief layout of the paper
 The structure of this paper is the following. In section~\ref{Methods}, we provide a description of the electron distribution and the toy magnetic field model adopted in our study. In section~\ref{Results} synthetic polarised synchrotron maps are produced adopting this model, which are then compared against the Planck data. A grid scan of the model against the data is then made in order that constrained model parameters are obtained. In section~\ref{Deflections} we determine the arrival directions of ultra high energy cosmic rays $\rm E = 30$~EeV from our toy model and discuss how the uncertainties in the parameters can propagate errors in estimating the cosmic ray directions. %We also compare results from the toy model and the halo fields from JF12 model.
@@ -111,11 +111,12 @@ Since, we focus only on the Galactic regions of the sky which probe the Galactic
 %We studied each component of the JF12 field separately in order to ascertain how the different components of the Galactic magnetic field model act individually and together. 
 However, it should be noted that the JF12 model was motivated by observations which masked out a large part of the Galactic bubble region, and adopts magnetic fields strengths weaker than the ones suggested by S-PASS observation \cite{Carretti_2013}.
 \begin{figure*}
-\centering
-\includegraphics[width = 0.49\linewidth]{Images/ToyModel_BestFit_XZ.png}%
-\includegraphics[width = 0.49\linewidth]{Images/ToyModel_BestFit_XY.png}
-\caption{Cross-section of toy model for the Galactic magnetic field in the Galactic halo region in the XY and XZ plane (with the Galactic plane in the XY plane at $z=0$) showing their drop in two dimensions.}
-\label{fig:Vis_TM}
+    \centering
+    \includegraphics[width = 9cm]{Images/ToyModel_BestFit_XZ.png}%
+    \includegraphics[width = 9cm
+    ]{Images/ToyModel_BestFit_XY.png}
+    \caption{Cross-section of toy model for the Galactic magnetic field in the Galactic halo region in the XY and XZ plane (with the Galactic plane in the XY plane at $z=0$) showing their drop in two dimensions. \Andrew{REMOVE MOD SIGNS AND VEC NOTATION ON B IN COLAR BAR LABEL}}
+    \label{fig:Vis_TM}
 \end{figure*}
 
 %Discuss the electron distribution
@@ -124,23 +125,22 @@ However, it should be noted that the JF12 model was motivated by observations wh
 In order to produce synthetic synchrotron maps an electron distribution is required.
 The JF12 model considered both the WMAP analytical expression \ref{Eq_WMAP_EdNdE}
 and simulated electron distribution from GALPROP. They used the latter for their model in their paper.
-The two models are quite different. The WMAP \cite{WMAP_Page} model is an analytical expression whereas the GALPROP \cite{Hammurabi} is based on numerical simulations and the distribution of supernova remnants in the Galaxy. For our toy model we adopted the WMAP distribution model. Our current knowledge of the non-thermal electron distribution in the Galaxy, especially in the Galactic halo region, is very limited. We therefore prefer to adopt a simple analytical model in order to avoid adding further layers of complexity. The WMAP electron density distribution model is:
+The two models are quite different. The WMAP \cite{WMAP_Page} model is an analytical expression whereas the GALPROP \cite{Hammurabi} is based on numerical simulations and the distribution of supernova remnants in the Galaxy. For our toy model we adopted the WMAP distribution model. Our current knowledge of the non-thermal electron distribution in the Galaxy, especially in the Galactic halo region, is very limited. We therefore prefer to adopt a simple analytical model in order to avoid adding further layers of complexity. The WMAP electron distribution model is:
 \begin{equation}\label{Eq_WMAP_EdNdE}
-    \frac{\mathrm{d}n_e}{\mathrm{dlog}E_{e}} =     C_\mathrm{norm} \left(\frac{E_e}{\rm E_{\rm 10 GeV}}\right)^{-p+1} e^{-r/R_{\mathrm{el}}} \mathrm{sech}^2(z/Z_{\mathrm{el}}) 
+    \frac{\mathrm{d}N_e}{\mathrm{dlog}E_{e}} =     C_\mathrm{norm} \left(\frac{E_e}{\rm E_{\rm 10 GeV}}\right)^{-p+1} e^{-r/R_{\mathrm{el}}} \mathrm{sech}^2(z/Z_{\mathrm{el}}) 
 \end{equation}
-where $\frac{\mathrm{d}n_e}{\mathrm{dlog}E_{e}}$ is the differential electron density in logarithmic energy bins, in units of ${\rm cm}^{-3}$, and $p =3$ is the spectral index of the electron spectrum. The parameters, $C_\mathrm{norm}$, describes the 10~GeV electron density, and $R_{\mathrm{el}}$ \& $Z_{\mathrm{el}}$ describe the radial and azimuthal spatial cut-offs. 
+where $\frac{\mathrm{d}N_e}{\mathrm{dlog}E_{e}}$ is the differential electron density in a certain energy bins
+in units of ${\rm cm}^{-3}$, $p =3$ is the spectral index. The parameters, $C_\mathrm{norm}$, describes the 10~GeV electron density, and $R_{\mathrm{el}}$ \& $Z_{\mathrm{el}}$ describe the radial and azimuthal spatial cut-offs. 
 
 
 % EdNdE plots for some arbitrary parameters which will be fixed post equipartition scans.
 \begin{figure*}
-\centering
-\includegraphics[width= 0.49\linewidth]{Images/Linear_EdNdE.png}%
-\includegraphics[width = 0.49\linewidth]{Images/Log_EdNdE.png}
-\caption{An example of the electron distribution for an electron energy (say) $E_e = $10~GeV, $R_{\mathrm{el}} = 5$ kpc and $Z_{\mathrm{el}} = 7$~kpc in linear scale on left and log-scale on right. \Andrew{Why is ref. density in plots so low?}}
-\label{fig:electron_density}
+    \centering
+    \includegraphics[width= 8cm]{Images/Linear_EdNdE.png}%
+    \includegraphics[width = 8cm]{Images/Log_EdNdE.png}
+    \caption{Electron distribution for $R_{\mathrm{el}} = 5$ kpc and $Z_{\mathrm{el}} = 7$~kpc in linear scale on left and log-scale on right. \Andrew{LABELS ALL TOO SMALL}}
+    \label{fig:my_label}
 \end{figure*}
-
-\Andrew{ALSO, I SUGGEST $n_e$ BE USED FOR DENSITY (SHOULD THEREFORE BE USED IN FIG.~\ref{electron_density}), AND $N_e$ BE KEPT FOR TOTAL NUMBER- THIS WAY WILL HELP KEEP CONSISTENCY WITHEQNS~\ref{Jperp} AND \ref{Jpara}.}
 
 % synchrotron radiation expressions and theory, also the appendix.
 \subsection{Synchrotron Emission}\label{Synchrotron_theory}
@@ -176,8 +176,7 @@ where the functions,
 F(x) &= x \int_x^\infty K_{5/3}(x') dx'\\
 G(x) &= x K_{2/3}.
 \end{align}
-\Andrew{IN THE ABOVE IT MIGHT BE BETTER TO PROVIDE THE EMISSIVITY OF THE TWO POLARISATION COMPONENTS}
-These expressions are provided in terms of the critical field magnetic field strength, $B_{\mathrm{crit}} = \frac{m_e^2c^3}{e\hbar} = 4.414 \times 10^{13}$~G , where $m_e = 0.511$~MeV is the mass of electron, $h = 4.136 \times 10^{-15}$~eV~s is the Planck's constant and $\alpha \approx \frac{1}{137.04}$ is the electromagnetic fine structure constant.
+These expressions are provided in terms of the critical field magnetic field strength, $B_{\mathrm{crit}} \frac{m_e^2c^3}{e\hbar} = 4.414 \times 10^{13}$~G, where $m_e = 0.511$~MeV is the mass of electron, $h = 4.136 \times 10^{-15}$~eV-sec is the Planck's constant and $\alpha \approx \frac{1}{137.04}$ is the electromagnetic fine structure constant.
 
 For clarity, several of the conventions we adopted are here noted. The parallel component of polarisation (${J_{\parallel}}$) is orientated in the same direction as  $\vec{B_{\perp}}$, and the perpendicular component of polarisation (${J_{\perp}}$) is perpendicular to $\vec{B_{\perp}}$. The Stokes parameters at each point along the line of sight can be written in terms of the intrinsic polarisation angle $\Psi^l_{\rm in}$ which is the angle between the line of sight perpendicular component of the magnetic field $B_{\perp}$ and Galactic south at each step. The conventions adopted here match those used by the Planck collaboration \cite{Planck_XIX} based on the $\rm HEALPix^3$~\footnote{\textcolor{purple}{https://healpix.jpl.nasa.gov/}} software by \cite{Healpix_2005}. For each step along the line-of-sight, both  ${J_{\perp}^l}$ and ${J_{\parallel}^l}$ are subsequently used to obtain the $Q$ and $U$ Stokes parameters. The integrated values along the line of sight can be defined as  $Q^{\rm tot}_{\rm in}$ and $U^{\rm tot}_{\rm in}$ as:
 \begin{eqnarray}
@@ -192,15 +191,13 @@ I_{\rm pol} = \sqrt{(Q_{\rm in}^{\rm tot})^2+(U_{\rm in}^{\rm tot})^2} = J_{\per
 \begin{equation} \label{eq_I_tot}
     I_{\rm tot} = J_{\perp}^{\rm tot} + J_{\parallel}^{\rm tot} 
 \end{equation}
-$I_{\rm tot}$ is computed by summing the contributions of $J_{\perp}^l$ and and $J_{\parallel}^l$ for each point along the line of sight. 
-% \Andrew{I don't think you give the reader sufficient information here. How $I_{\rm tot}$ is obtained (simple summing from each shell) needs explaining.}
 $J_{\perp}^{\rm tot}$ and $J_{\parallel}^{\rm tot}$ are the resultant magnitudes of emissions in perpendicular and parallel directions and can be given by:
 \begin{eqnarray}
 J_{\perp}^{\rm tot} = (I_{\rm tot} + I_{\rm pol})/2 \\
 J_{\parallel}^{\rm tot} = (I_{\rm tot} - I_{\rm pol})/2 
 \end{eqnarray}
 In appendix(\ref{Appendix_A}) we explain in detail the relation between these equations with two simplified cases.
-The intrinsic polarisation angle $\Psi_{\rm in}$ is the resulting angle of polarisation.%\Andrew{This doesn't sound right- this angle describe the angle of the results polarised emission direction wrt Galactic south, not the "local magnetic field component" direction}:
+The intrinsic polarisation angle $\Psi_{\rm in}$ between the Galactic south and the local magnetic field component perpendicular to the line of sight can be defined as:
 \begin{eqnarray}
 \tan(2\Psi_{\rm in}) = \frac{U_{\rm in}^{\rm tot}}{Q_{\rm in}^{\rm tot}} 
 \end{eqnarray}
@@ -226,7 +223,7 @@ For our synchrotron emission study We use the publicly available from the Planck
 \label{Results}
 %% Details of uncertainities 
 We obtained 1$~\sigma$ constraint on our model shown in table~$\ref{Para_table}$. For the structured magnetic field strength $B_{\rm str}$ we obtain the best fit value of 3~$\mu$G with the upper extreme being 11~$\mu$G
-and the lower extreme 1~$\mu$G. Similarly, turbulent magnetic fields $B_{\rm tur}$ the mean value is 6~$\mu$G and upper and lower extreme values are 4~$\mu$G and 12~$\mu$G respectively. For spatial dimensions, we obtain a best fit vale of 7~kpc for the azimuthal extent $Z_{\rm Mag}/Z_{\rm el}$ and uncertainities of $\pm$ 1~kpc. These values are in agreement with the observations made by FERMI\cite{Su_2010}, S-PASS\cite{Carretti_2013} and eROSITA\cite{eROSITA}. We do not however, obtain an upper extreme value for $R_{\rm Mag}/R_{\rm el}$ only a lower extreme value of 4~kpc with the best fit value being 5~kpc. Again this best fit value is in agreement with the radial extent as obtained by the observations.
+and the lower extreme 1~$\mu$G. Similarly, turbulent magnetic fields $B_{\rm tur}$ the mean value is 6~$\mu$G and upper and lower extreme values are 4~$\mu$G and 12~$\mu$G respectively. For spatial dimensions, we obtain a best fit vale of 7~kpc for the azimuthal extent $Z_{\rm Mag}/Z_{\rm el}$ and uncertainities of $\pm$ 1~kpc. Similarly, for electron densities we obtain a best fit value of $3\times 10^{-13} \rm cm^{-3}$ \Vasu{Will update this!} These values are in agreement with the observations made by FERMI \cite{Su_2010}, S-PASS\cite{Carretti_2013} and eROSITA\cite{eROSITA}. We do not however, obtain an upper extreme value for $R_{\rm Mag}/R_{\rm el}$ only a lower extreme value of 4~kpc with the best fit value being 5~kpc. Again this best fit value is in agreement with the radial extent as obtained by the observations.
 
 In Fig.~\ref{fig:Skymaps} the smoothened skymap obtained from the best fit value of the parameters and the smoothened polarised Planck data is shown along with the residuals. The best-fit values used for the parameters are provided in table~\ref{Para_table}. 
 %% Polarisation fraction
@@ -281,7 +278,7 @@ When charged particles propagate through magnetic fields, they precess around th
 \begin{eqnarray}
 \frac{{\rm d}\bfm{\beta}}{c{\rm d}t} = \frac{1}{r_{L}}\bfm{\beta}\times \bfm{\hat{B}}, 
 \end{eqnarray}
-where $\bfm{\beta}$ is the particle's velocity vector, and $r_{L}$ is the particle's Larmor radius. UHECRs undergo the same Lorentz force when propagating through Galactic magnetic fields. The extragalactic magnetic field is considered to be weak, with $B < \rm {nG}$ for $\lambda_{\rm coh}=1$~Mpc \cite{Barrow_1997}, \cite{Kronberg_2007}, and the ultra-high energy cosmic rays UHECRs $E > 10^{19}$ EeV and subsequently $r_{L}>{\rm 10~Mpc}$ are therefore not sensitive to them over 10~Mpc propagation distance scales. However, once they enter the Galaxy magnetic fields are of the order of few $\mu$G. In case for a proton at 6~EeV in $6~\mu$G field the $r_L \approx 1 ~ \rm kpc$ , this implies that the proton will be subject to deflection by the large scale Galactic magnetic fields.
+where $\bfm{\beta}$ is the particle's velocity vector, and $r_{L}$ is the particle's Larmor radius. UHECRs undergo the same Lorentz force when propagating through Galactic magnetic fields. The extra-Galactic magnetic field is considered to be weak, with $B < \rm {nG}$ for $\lambda_{\rm coh}=1$~Mpc \cite{Barrow_1997}, \cite{Kronberg_2007}, and the ultra-high energy cosmic rays UHECRs $E > 10^{19}$ EeV and subsequently $r_{L}>{\rm 10~Mpc}$ are therefore not sensitive to them over 10~Mpc propagation distance scales. However, once they enter the Galaxy magnetic fields are of the order of few $\mu$G. In case for a proton at 6~EeV in $6~\mu$G field the $r_L \approx 1 ~ \rm kpc$ , this implies that the proton will be subject to deflection by the large scale Galactic magnetic fields.
 
 To propagate the cosmic rays we used the CRPropa3's \cite{CRPropa3_2016} Boris pusher scheme in order to ensure particle's trajectory evolution satisfies the Lorentz force equation. CRPropa conserves the total energy each particle during the propagation. 
 To achieve this we backtrack $10^7$ cosmic rays starting isotropically from earth to a distance of 20~kpc. We use nitrogen as a choice of our cosmic ray particles at 40~EeV energy. 
@@ -327,7 +324,7 @@ It can be seen that the best fit and lower extreme parameters can clearly help i
 %\begin{center}
 \begin{table*}
 \centering
-\caption{CAPTION TEXT GOES HERE- \Andrew{NOT REALLY SURE THIS TABLE IS NEEDED}}
+\caption{CAPTION TEXT GOES HERE}
 \begin{tabular}{|p{3.cm}|p{4.cm}|p{4.cm}|p{4.cm}|}
     \hline
     Parameter set & Mean (${}^\circ$)& SD (${}^\circ$) & Variance ($str$)\\
@@ -344,6 +341,7 @@ It can be seen that the best fit and lower extreme parameters can clearly help i
      Upper & $\overline{b} = 0.33$, $\overline{l} = 32.07$ & $\sigma_{b} = 38.06$ , $\sigma_{l} = 83.47$ & $\sigma^2_{b} = 0.44 $, $\sigma^2_{l} = 2.12$\\
     \hline
   \multicolumn{4}{|c|}{NGC 253} \\ 
+    \hline
     \rule{0pt}{3ex} 
     Best Fit & $\overline{b} = -48.89$, $\overline{l} = -1.36$  & $\sigma_{b} = 22.86$ , $\sigma_{l} = 83.98$ & $\sigma^2_{b} = 0.15 $, $\sigma^2_{l} = 2.14$ \\
     \hline
@@ -378,12 +376,9 @@ It can be seen that the best fit and lower extreme parameters can clearly help i
 \label{Conclusions}
 
 %\clearpage
-%\section{References}
+\section{References}
 
 %\printbibliography[heading=none]
-
-\section*{Acknowledgements}
-V.~Shaw would like to thank Mike Peel from the Planck collaboration for helpful discussions about the Planck data.
 
 \bibliographystyle{mnras}
 \bibliography{references.bib}
@@ -403,14 +398,23 @@ Q^l_{\rm in} = ({J_{\perp}^l} - J_{\parallel}^l) \ {\cos}(2\Psi^l_{\rm in}) \ \\
 We can take two test cases (I \& II) given in figure(\ref{fig_tot_intensity}) and figure (\ref{fig_pol_intensity}) respectively.We consider that there are two steps along a line of sight for which ${J_{\perp}^{(1,2)}}$ = 0.85 and $J_{\parallel}^{(1,2)}$  = 0.15. 
 \\ In case I the angles $\Psi_{\rm in}^{(1,2)}$ = $90^{\circ}$ \& $0^{\circ}$. The resultant value of $I_{\rm pol}$ = 0 by virtue of eq.(\ref{eq_I_pol}) and we only have a contribution in $I_{\rm tot}$. This implies that for case I the resultant emission is seen only in total intensity since the values of $J_{\perp}^{\rm tot}$ = $J_{\parallel}^{\rm tot}$. 
 \\ In case II we apply similar calculations to case I however, now the angles are $\Psi_{\rm in}^{(1,2)}$ = $90^{\circ}$ \& $45^{\circ}$. This in turn results in contribution to both polarised emission $I_{\rm pol}$ and total intensity $I_{\rm tot}$. Thus the values of $J_{\perp}^{\rm tot} \neq J_{\parallel}^{\rm tot}$. In figure(\ref{fig_pol_intensity}) we only show polarised intensity for simplicity however, there will be both total intensity and polarised intensity present.
-
 \begin{figure*}
-\centering
-\includegraphics[width = 0.49\linewidth]{Images/Total_intensity_Ellipses_circles_emissions.png}
-\label{fig_tot_intensity}
-\includegraphics[width = 0.49\linewidth]{Images/Pol_intensity_Ellipses_circles_emissions.png}
-\label{fig_pol_intensity}
-\caption{Diagram depicting visually the resultant ellipse, obtained from the summation of two ellipses of equal magnitude, but different orientations. The resultant ellipse dictates the resultant total and polarised intensities.}
+     \centering
+%     \begin{subfigure}{0.4\textwidth}
+%         \centering
+         \includegraphics[width = 0.49\linewidth]{Images/Total_intensity_Ellipses_circles_emissions.png}
+%         \caption{Case I - Total intensity}
+%         \label{fig_tot_intensity}
+%     \end{subfigure}
+%  \hfill
+%    \begin{subfigure}{0.4\textwidth}
+%         \centering
+         \includegraphics[width = 0.49\linewidth]{Images/Pol_intensity_Ellipses_circles_emissions.png}
+%         \caption{Case II - Polarised intensity}
+%         \label{fig_pol_intensity}
+%     \end{subfigure}
+%     \hfill
+\caption{Simplified diagram of emission components for total and polarised intensities in terms of the polarisation ellipses.}
 \end{figure*}
 
 %\newpage
@@ -418,26 +422,27 @@ We can take two test cases (I \& II) given in figure(\ref{fig_tot_intensity}) an
 \section{Turbulent Magnetic Field}
 \label{Appendix_B}
 As discussed in section ~\ref{GMF} we generate the turbulent fields for our model using CRPropa3 ~\cite{CRPropa3_2016}. We the minimum and maximum wavelength we use to generate these fields are 
-$L_{min}$ = 200 pc and $L_{max}$ = 400 pc and $L_{coh} \approx $~150 kpc. One of the major reasons why we do not have enough decades covered for the wavelength is because of the time it takes to generate these fields using CRPropa. 
-We looked at power spectrum for different realisations of the turbulent field. In figure ~\ref{fig:PowerSpectrum} we plot power spectrum in X,Y and Z directions by averaging over the other two directions. We chose a step size of 1~pc and integrate up to $\approx 9\times10^4$~pc. We chose this particular realisation since it followed closely a power law spectrum of index (5/3). 
-
-\begin{figure*}
-    %\centering
-    \includegraphics[width = 0.49\linewidth]{Images/Jan27_Test_PowerSpectrum_vs_lambda_seed_10_lmin_200.0lmax_400.0.png}
-    \caption{Power spectrum of turbulent magnetic field, evaluated along three orthogonal directions, namely the X, Y and Z directions.}
+$L_{min}$ = 200 pc and $L_{max}$ = 400 pc and $L_{coh} \approx $~150 kpc. For all the three directions x,y and z we go from 1~pc to $\rm 8\times 10^{4}$~pc. One of the major reasons why we do not have enough decades covered for the wavelength is because of the time it takes to generate these fields using CRPropa. 
+We looked at power spectrum for different realisations of the turbulent field. In figure ~\ref{fig:PowerSpectrum} we plot power spectrum in X,Y and Z directions by averaging over the other two directions. We chose this particular realisation since it followed closely a power law spectrum of index (5/3). 
+\begin{figure}[h!]
+    \centering
+    \includegraphics[width = 10cm]{Images/Jan27_Test_PowerSpectrum_vs_lambda_seed_10_lmin_200.0lmax_400.0.png}
+    \caption{Power spectrum plot versus wavelength for X, Y and Z direction}
     \label{fig:PowerSpectrum}
-\end{figure*}
+\end{figure}
 
 \iffalse
 
-\begin{figure*}
-\centering
-\includegraphics[width = 0.49\linewidth]{Images/Haslam_408MHz.png}
-\includegraphics[width =0.49\linewidth]{Images/408MHz_TI_Spec_Ind_3.0_Bstr_7_Btur_9_R_19_Z_7_norm_4.3.png}
+\newgeometry{top=20mm, bottom=20mm,lmargin=1.mm,rmargin=1.mm} 
+\begin{figure}[h!]
+    \centering
+    \includegraphics[width = 10cm]{Images/Haslam_408MHz.png}
+    \includegraphics[width =
+    10cm]{Images/408MHz_TI_Spec_Ind_3.0_Bstr_7_Btur_9_R_19_Z_7_norm_4.3.png}
  %   \includegraphics[width = 10cm]{Images/408MHz_TI_Spec_Ind_3.3_Bstr_5_Btur_10_R_12_Z_7.png}
     \caption{In figure Haslam data is shown top left, toy model total intensity map top right and in the bottom JF12 skymaps. The disc field is removed from this skymap and it includes Xfield, toroidal halo and turbulent fields.All calculated at $408$MHz. \Andrew{Color bar scales should have a fixed ranged (to allow easy comparison between maps)}}
     \label{fig:my_label}
-\end{figure*}
+\end{figure}
 %\newpage
 
 \fi
