--- a/main.tex
+++ b/main.tex
@@ -66,27 +66,27 @@ The origin and structure of the Galactic magnetic field remains a long standing 
 A variety of methods allow observational probes of Galactic magnetic fields, such as starlight polarisation and infrared emission from dust grains, or Zeeman splitting of spectral radio lines in the dust clouds \cite{Beck_2007}. Galactic magnetic fields are also probed by Pulsar dispersion with Faraday rotation, which is sensitive to the magnetic-field component parallel to the line of sight $B_{\parallel}$, and synchrotron radiation which probes the component perpendicular to the line of sight $B_{\perp}$. A major drawback in using the Pulsar dispersion measure along with the Faraday rotation measure method for probing Galactic magnetic fields is that it relies heavily on the lines of sight along which Pulsars are found, which places a strong focus on the regions close to the Galactic plane. Therefore, this method is of most use for probing the magnetic field in the Galactic disc region, and is not so useful for probing the magnetic field out in the Galactic halo. Synchrotron radiation on the other hand is produced via the gyration of non-thermal electrons along magnetic field lines. This method can thus be used to probe magnetic fields also in the Galactic halo.
 
 % Observations from Fermi 
-The observations from FERMI-LAT \cite{Su_2010} in the gamma ray regime unveiled giant bipolar gamma ray bubbles extending up to $\approx$~3~kpc radially and $\approx$~8~kpc in the z-direction, having a total energy of $\approx 10^{(54-55)}$~ergs. Recently, observations from eROSITA \cite{eROSITA} in X-ray regime further suggest existence of even larger bubbles going up to  $\approx$~7~kpc radially and $\approx$~14~kpc in the azimuthal direction, having a total energy of $\approx 10^{(56)}$~ergs. These observations strongly motivate the requirement of a magnetic field model focusing on the halo. Henceforth, for the sake of simplicity we will address the two bubbles together as the Galactic halo bubbles.
+The observations from FERMI-LAT \cite{Su_2010} in the gamma ray regime unveiled giant bipolar gamma ray bubbles extending up to $\approx$~3~kpc radially and $\approx$~8~kpc in the z-direction, having a total energy of $\approx 10^{(54-55)}$~ergs. Recently, observations from eROSITA \cite{eROSITA} in X-ray regime further suggest the existence of even larger bubbles going up to  $\approx$~7~kpc radially and $\approx$~14~kpc in the azimuthal direction, having a total energy of $\approx 10^{(56)}$~ergs. These observations strongly motivate the requirement of a magnetic field model focusing on the halo. Henceforth, for the sake of simplicity we will address the two bubbles together as the Galactic halo bubbles.
 
 % Observations from S-PASS and Planck
 With the help of the aforementioned techniques, we can estimate the strength and direction of the magnetic field in different parts of the Galaxy. 
-For the Galactic halo the S-PASS \cite{Carretti_2013} observations  made at 2.3 GHz seem to suggest that the field strength in the halo bubbles can be anywhere between $6-10~\mu $G depending on the proton-electron ratio. S-PASS \cite{Carretti_2013} observation however are subject to depolarisation of polarised synchrotron radiation via Faraday rotation due to its low observation frequencies and this data set is also not sensitive to a portion of the Fermi bubbles because of its positioning in the southern hemisphere. For this reason data from Planck and WMAP are more helpful when probing magnetic fields in the Galactic halo due to their all sky coverage and observation bandwidths which are not sensitive to Faraday rotation effects.
+For the Galactic halo the S-PASS \cite{Carretti_2013} observations  made at 2.3 GHz seem to suggest that the field strength in the halo bubbles can be anywhere between $6-10~\mu $G depending on the proton-electron ratio. S-PASS \cite{Carretti_2013} observations however are subject to depolarisation of polarised synchrotron radiation via Faraday rotation due to its low observation frequencies. Additionally this data set is also not sensitive to a portion of the Fermi bubbles because of its positioning in the southern hemisphere. For this reason data from Planck and WMAP are more helpful when probing magnetic fields in the Galactic halo due to their all sky coverage and observation bandwidths which are not sensitive to Faraday rotation effects.
 
 % Other magnetic field models and energies in the halo.
 
-Several efforts have  been made in modelling magnetic fields in the Galaxy namely by \cite{Jaffe_2010},\cite{Jaffe_2011}, \cite{Sun_2008},and \cite{JF12}. It should be noted that our understanding for Galactic disc is much better than the halo due to larger amount of observational data present at varying frequencies. However, widely used models like JF12 \cite{JF12} have made considerable contributions also towards modelling of Galactic halo. One drawback with JF12 \cite{JF12} is that they mask out the Fermi bubble regions in their models but, S-PASS\cite{Carretti_2013} observations tell us that magnetic field strength in this region is not negligible. Therefore, it is important to consider modelling the Galactic halo including the Fermi bubbles.
+Several efforts have  been made in modelling magnetic fields in the Galaxy namely by \cite{Jaffe_2010}, \cite{Jaffe_2011}, \cite{Sun_2008}, and \cite{JF12}. It should be noted that our understanding of the Galactic disc is much better than that of the halo due to the larger amount of observational data present at varying frequencies. However, widely used models like JF12 \cite{JF12} have also made considerable contributions towards the modelling of the Galactic halo. One drawback of JF12 \cite{JF12} is that it masks out the Fermi bubble regions in its models, but S-PASS \cite{Carretti_2013} observations tell us that magnetic field strength in this region is not negligible. Therefore, it is important to consider modelling the Galactic halo including the Fermi bubbles.
 
 
 % Short note on non-thermal electron distribution.
 \Vasu{This paragraph needs more work}
-Apart from the Galactic magnetic field, our understanding of the non-thermal electron distribution in the Galaxy is also poor. We have some information on the distribution of cosmic ray electrons from the observations made by AMS01 \cite{AMS_2002} \& \cite{AMS_2014}, CALET \cite{Calet_2017}, DAMPE \cite{Dampe_2017}, CAPRICE94 \cite{CAPRICE_2001} , HEAT\cite{Heat_2001}, SANRIKU\cite{Sanriku_1999}, BETS\cite{Bets_2001}, PPT-BETS\cite{PPT_BETS}, ATIC-1-2\cite{AITC_1_2},H.E.S.S.\cite{HESS_2008}\cite{HESS_2009}, Fermi-LAT \cite{FERMI_2009}, \cite{FERMI_2010} \& \cite{Fermi_2017}, PAMELA \cite{Pamela}. Currently, there are a few ways to model the spatial distribution of these relativistic electrons; for example, with GALPROP \cite{Hammurabi} \cite{Orlando_2011} or the analytical WMAP model \cite{WMAP_Page}. The knowledge of non-thermal electrons is imperative in modelling Galactic magnetic field and generating synchrotron maps.  \Arjen{Perhaps this paragraph can be extended a bit. Why do we care about the non-thermal electron distribution when talking about the Galactic magnetic field? Why is our knowledge of the non-thermal electron distribution so poor? How can it be measured and how do the models that you mention relate to the measurements?} \Vasu{Currently working on it.}
+Apart from the Galactic magnetic field, our understanding of the non-thermal electron distribution in the Galaxy is also poor. We have some information on the distribution of cosmic ray electrons from the observations made by AMS01 \cite{AMS_2002} \& \cite{AMS_2014}, CALET \cite{Calet_2017}, DAMPE \cite{Dampe_2017}, CAPRICE94 \cite{CAPRICE_2001} , HEAT \cite{Heat_2001}, SANRIKU \cite{Sanriku_1999}, BETS \cite{Bets_2001}, PPT-BETS \cite{PPT_BETS}, ATIC-1-2 \cite{AITC_1_2}, H.E.S.S. \cite{HESS_2008} \cite{HESS_2009}, Fermi-LAT \cite{FERMI_2009}, \cite{FERMI_2010} \& \cite{Fermi_2017}, PAMELA \cite{Pamela}. Currently there are a few ways to model the spatial distribution of these relativistic electrons; for example, with GALPROP \cite{Hammurabi} \cite{Orlando_2011} or the analytical WMAP model \cite{WMAP_Page}. The knowledge of non-thermal electrons is imperative in modelling Galactic magnetic fields and generating synchrotron maps.  \Arjen{Perhaps this paragraph can be extended a bit. Why do we care about the non-thermal electron distribution when talking about the Galactic magnetic field? Why is our knowledge of the non-thermal electron distribution so poor? How can it be measured and how do the models that you mention relate to the measurements?} \Vasu{Currently working on it.}
 However, when modelling Galactic magnetic fields, Galactic cosmic ray electrons are not the only particles of interest. 
 
 % Importance of UHECRs
-The propagation of cosmic rays is vital to understand their sources, and this is in turn is limited by our understanding of the intervening magnetic fields. Unfortunately, both Galactic and extragalactic magnetic fields are presently poorly understood. Arrival direction of extragalactic cosmic rays (with energies higher than $\approx$~$10^{18}$), also known  as ultra high energy cosmic rays (UHECRs). These UHECRs are constituted by charged protons or nuclei, and therefore their origin directions are scrambled by the magnetic fields in the path between the source and earth. The paths of these UHECRs can, therefore, be drastically changed depending on the strength and geometry of the field. Different models of the Galactic magnetic field give vastly different predictions for the deflection of UHECRs (see e.g.~Ref.~ \cite{FARRAR_2014} \textcolor{blue}{ADD REF}). Recently, significant anisotropies in the UHECR sky have been discovered (see \cite{Auger_Starburst2018} \& \cite{ICRC_2019}. Due to the deflections in the Galactic magnetic fields, the interpretation of these results in terms of the localisation of the UHECR sources is extremely hard and hence, the knowledge of Galactic magnetic fields is extremely important. 
+The propagation of cosmic rays is vital to understand their sources, and this in turn is limited by our understanding of the intervening magnetic fields. Unfortunately, both Galactic and extragalactic magnetic fields are presently poorly understood. Arrival direction of extragalactic cosmic rays (with energies higher than $\approx$~$10^{18}$) are also known as ultra high energy cosmic rays (UHECRs). These UHECRs are constituted by charged protons or nuclei, and therefore their origin directions are scrambled by the magnetic fields in the path between the source and earth. The paths of these UHECRs can therefore be drastically changed depending on the strength and geometry of the field. Different models of the Galactic magnetic field give vastly different predictions for the deflection of UHECRs (see e.g.~Ref.~ \cite{FARRAR_2014} \textcolor{blue}{ADD REF}). Recently, significant anisotropies in the UHECR sky have been discovered (see \cite{ICRC_2021} \cite{Auger_Starburst2018} \& \cite{ICRC_2019}. Due to the deflections in the Galactic magnetic fields, the interpretation of these results in terms of the localisation of the UHECR sources is extremely hard and hence, knowledge of Galactic magnetic fields is extremely important. 
 
 % Introduction to brief layout of the paper
-The structure of this paper is the following. In section~\ref{Methods}, we provide a description of the electron distribution and the toy magnetic field model adopted in our study. In section~\ref{Results} synthetic polarised synchrotron maps are produced adopting this model, which are then compared against the Planck data. A grid scan of the model against the data is then made in order that constrained model parameters are obtained. In section~\ref{Deflections} we determine the arrival directions of ultra high energy cosmic rays $\rm E = 30$~EeV from our toy model and discuss how the uncertainties in the parameters can propagate errors in estimating the cosmic ray directions. %We also compare results from the toy model and the halo fields from JF12 model.
+The structure of this paper is the following. In section~\ref{Methods} we provide a description of the electron distribution and the toy magnetic field model adopted in our study. In section~\ref{Results} synthetic polarised synchrotron maps are produced adopting this model, which are then compared against the Planck data. A grid scan of the model against the data is then made in order to obtain constrained model parameters. In section~\ref{Deflections} we determine the arrival directions of ultra high energy cosmic rays $\rm E = 30$~EeV from our toy model and discuss how the uncertainties in the parameters can propagate errors in estimating the cosmic ray directions. %We also compare results from the toy model and the halo fields from JF12 model.
 Lastly, in section~\ref{Conclusions} we summarise our conclusions.
 
 
@@ -96,20 +96,20 @@ Lastly, in section~\ref{Conclusions} we summarise our conclusions.
 % Toy model introduction and comparison to JF12 
 \subsection{Galactic Halo Magnetic Field Model}
 \label{GMF}
-In this paper we follow the philosophy \cite{West_Helicity}, adopting a simple toy model as means of a preliminary attempt to provide a model for the Galactic halo bubbles. 
+In this paper we follow the philosophy of \cite{West_Helicity}, adopting a simple toy model as means of a preliminary attempt to provide a model for the Galactic halo bubbles. 
 
-For our toy model we adopt an axisymmetric torroidal structured field, along with a Kolmogorov turbulent field with a power-law spectrum spectrum of index $5/3$ given by the following expression:
+For our toy model we adopt an axisymmetric torroidal structured field, along with a Kolmogorov turbulent field with a power-law spectrum of index $5/3$ given by the following expression:
 \begin{equation}\label{TM_equation}
 B_{\rm{toy}}= B_{\rm{str}}\rm{e}^{{(-|z|}/Z_{\rm{mag}})} \rm{e}^{(-z_{\rm{min}}/|z|)}\rm{e}^{(-|r|/R_{\rm{mag}})} + B_{\rm{tur}}
 \end{equation}
 The structured field has 3 free parameters: $B_{\rm str}$ as the strength of the magnetic field, and $R_{\rm {mag}}$ and $Z_{\rm {mag}}$ describing the radial and azimuthal cut off distances, respectively. The model spans radially up to 20~kpc with the observer being centered at earth (-8.5,0,0)~kpc. The direction of the toroidal field is orientated in opposite directions above and below the Galactic plane. A visualisation of the field in XY and XZ cross-sections is shown in figure[\ref{fig:Vis_TM}]. 
 
 We use CRPropa~3 \cite{CRPropa3_2016} for generating turbulent fields which has a power law spectrum, with the magnitude of this component being $B_{\rm{tur}}$. 
-The minimum and maximum values of wavelength to generate these fields are  $L_{\rm min}$ = 200~pc and $L_{\rm max}$ = 400~pc. For computational reasons we stick to this restricted dynamic range of $L_{\rm min}$ and $L_{\rm max}$. The turbulent field has effectively only 1 free parameter which is the magnitude of the turbulent field strength, $ B_{\rm tur}$, with the coherence length of the field being kept fixed at 150~pc.  In appendix ~\ref{Appendix_B} we show a power-spectrum plot for this turbulent magnetic field description.
+The minimum and maximum values of wavelength to generate these fields are  $L_{\rm min}$ = 200~pc and $L_{\rm max}$ = 400~pc. For computational reasons we stick to this restricted dynamic range of $L_{\rm min}$ and $L_{\rm max}$. The turbulent field has effectively only 1 free parameter which is the magnitude of the turbulent field strength, $ B_{\rm tur}$, with the coherence length of the field being kept fixed at 150~pc.  In appendix~\ref{Appendix_B} we show a power-spectrum plot for this turbulent magnetic field description.
 
 Since, we focus only on the Galactic regions of the sky which probe the Galactic halo, we do not include any disk magnetic field component in this model. For the purposes of comparison, we use the JF12 model as a comparative reference since it is a widely known Galactic magnetic field model.
 %We studied each component of the JF12 field separately in order to ascertain how the different components of the Galactic magnetic field model act individually and together. 
-However, it should be noted that the JF12 model was motivated by observations which masked out a large part of the Galactic bubble region, and adopts magnetic fields strengths weaker than the ones suggested by S-PASS observation \cite{Carretti_2013}.
+However, it should be noted that the JF12 model was motivated by observations which masked out a large part of the Galactic bubble region and adopts magnetic fields strengths weaker than the ones suggested by S-PASS observation \cite{Carretti_2013}.
 \begin{figure*}
 \centering
 \includegraphics[width = 0.49\linewidth]{Images/ToyModel_BestFit_XZ.png}%
@@ -134,13 +134,13 @@ where $\frac{\mathrm{d}n_e}{\mathrm{dlog}E_{e}}$ is the differential electron de
 % EdNdE plots for some arbitrary parameters which will be fixed post equipartition scans.
 \begin{figure*}
 \centering
-\includegraphics[width= 0.49\linewidth]{Images/Linear_EdNdE.png}%
+\includegraphics[width=0.49\linewidth]{Images/Linear_EdNdE.png}%
 \includegraphics[width = 0.49\linewidth]{Images/Log_EdNdE.png}
-\caption{An example of the electron distribution for an electron energy (say) $E_e = $10~GeV, $R_{\mathrm{el}} = 5$ kpc and $Z_{\mathrm{el}} = 7$~kpc in linear scale on left and log-scale on right. \Andrew{Why is ref. density in plots so low?}}
+\caption{An example of the electron distribution for an electron energy (say) $E_e = $1~GeV, $R_{\mathrm{el}} = 5$ kpc and $Z_{\mathrm{el}} = 7$~kpc in linear scale on left and log-scale on right. Since the electron distribution spectra peaks at 1~GeV we show the distribution for 1~GeV. $C_\mathrm{norm}$ value for this plot is $10^{-12.43}$ (see table~\ref{Para_table}) }  %\Andrew{Why is ref. density in plots so low?}}
 \label{fig:electron_density}
 \end{figure*}
 
-\Andrew{ALSO, I SUGGEST $n_e$ BE USED FOR DENSITY (SHOULD THEREFORE BE USED IN FIG.~\ref{electron_density}), AND $N_e$ BE KEPT FOR TOTAL NUMBER- THIS WAY WILL HELP KEEP CONSISTENCY WITHEQNS~\ref{Jperp} AND \ref{Jpara}.}
+%\Andrew{ALSO, I SUGGEST $n_e$ BE USED FOR DENSITY (SHOULD THEREFORE BE USED IN FIG.~\ref{electron_density}), AND $N_e$ BE KEPT FOR TOTAL NUMBER- THIS WAY WILL HELP KEEP CONSISTENCY WITHEQNS~\ref{Jperp} AND \ref{Jpara}.}
 
 % synchrotron radiation expressions and theory, also the appendix.
 \subsection{Synchrotron Emission}\label{Synchrotron_theory}
@@ -154,7 +154,7 @@ The two polarisation emission components, $J_{\perp}$ and $J_{\parallel}$, descr
 
 \begin{strip}
 \begin{equation}
- {J_{\perp}^l} =   \int_{\mathrm{log}E_e^{\mathrm{min}}}^{\mathrm{log}E_e^{\mathrm{max}}}\mathrm{dlog}E_{e} \  \frac{\mathrm{d}N_e}{\mathrm{dlog}E_{e}} \  \left[F\left(\frac{E_{\gamma}}{E_{\gamma}^{\mathrm{peak}}}\right) + G\left(\frac{E_{\gamma}}{E_{\gamma}^{\mathrm{peak}}}\right)\right] * \frac{B_{\perp}}{B_{\mathrm{crit}}}\frac{m_{e}}{h} \frac{8\pi \alpha}{9} 
+ {J_{\perp}^l} =   \int_{\mathrm{log}E_e^{\mathrm{min}}}^{\mathrm{log}E_e^{\mathrm{max}}}\mathrm{dlog}E_{e} \  \frac{\mathrm{d}n_e}{\mathrm{dlog}E_{e}} \  \left[F\left(\frac{E_{\gamma}}{E_{\gamma}^{\mathrm{peak}}}\right) + G\left(\frac{E_{\gamma}}{E_{\gamma}^{\mathrm{peak}}}\right)\right] * \frac{B_{\perp}}{B_{\mathrm{crit}}}\frac{m_{e}}{h} \frac{8\pi \alpha}{9} 
  \label{Jperp}
 \end{equation}
 \end{strip}
@@ -164,7 +164,7 @@ and,
 \begin{strip}
 %\begin{widetext}
 \begin{equation}
-{J_{\parallel}^l} = \int_{\mathrm{log}E_e^{\mathrm{min}}}^{\mathrm{log}E_e^{\mathrm{max}}}\mathrm{dlog}E_{e} \ \frac{\mathrm{d}N_e}{\mathrm{dlog}E_{e}} \  \left[F\left(\frac{E_{\gamma}}{E_{\gamma}^{\mathrm{peak}}}\right) - G\left(\frac{E_{\gamma}}{E_{\gamma}^{\mathrm{peak}}}\right)\right] * \frac{B_{\perp}}{B_{\mathrm{crit}}}\frac{m_{e}}{h} \frac{8\pi \alpha}{9}
+{J_{\parallel}^l} = \int_{\mathrm{log}E_e^{\mathrm{min}}}^{\mathrm{log}E_e^{\mathrm{max}}}\mathrm{dlog}E_{e} \ \frac{\mathrm{d}n_e}{\mathrm{dlog}E_{e}} \  \left[F\left(\frac{E_{\gamma}}{E_{\gamma}^{\mathrm{peak}}}\right) - G\left(\frac{E_{\gamma}}{E_{\gamma}^{\mathrm{peak}}}\right)\right] * \frac{B_{\perp}}{B_{\mathrm{crit}}}\frac{m_{e}}{h} \frac{8\pi \alpha}{9}
 \label{Jpara}
 \end{equation}
 %\end{widetext}
@@ -176,7 +176,7 @@ where the functions,
 F(x) &= x \int_x^\infty K_{5/3}(x') dx'\\
 G(x) &= x K_{2/3}.
 \end{align}
-\Andrew{IN THE ABOVE IT MIGHT BE BETTER TO PROVIDE THE EMISSIVITY OF THE TWO POLARISATION COMPONENTS}
+\Andrew{IN THE ABOVE IT MIGHT BE BETTER TO PROVIDE THE EMISSIVITY OF THE TWO POLARISATION COMPONENTS. DISCUSSION ON LINE-OF-SIGHT INTEGRAL NEEDS ADDING TOO.}
 These expressions are provided in terms of the critical field magnetic field strength, $B_{\mathrm{crit}} = \frac{m_e^2c^3}{e\hbar} = 4.414 \times 10^{13}$~G , where $m_e = 0.511$~MeV is the mass of electron, $h = 4.136 \times 10^{-15}$~eV~s is the Planck's constant and $\alpha \approx \frac{1}{137.04}$ is the electromagnetic fine structure constant.
 
 For clarity, several of the conventions we adopted are here noted. The parallel component of polarisation (${J_{\parallel}}$) is orientated in the same direction as  $\vec{B_{\perp}}$, and the perpendicular component of polarisation (${J_{\perp}}$) is perpendicular to $\vec{B_{\perp}}$. The Stokes parameters at each point along the line of sight can be written in terms of the intrinsic polarisation angle $\Psi^l_{\rm in}$ which is the angle between the line of sight perpendicular component of the magnetic field $B_{\perp}$ and Galactic south at each step. The conventions adopted here match those used by the Planck collaboration \cite{Planck_XIX} based on the $\rm HEALPix^3$~\footnote{\textcolor{purple}{https://healpix.jpl.nasa.gov/}} software by \cite{Healpix_2005}. For each step along the line-of-sight, both  ${J_{\perp}^l}$ and ${J_{\parallel}^l}$ are subsequently used to obtain the $Q$ and $U$ Stokes parameters. The integrated values along the line of sight can be defined as  $Q^{\rm tot}_{\rm in}$ and $U^{\rm tot}_{\rm in}$ as:
@@ -190,20 +190,20 @@ The polarised flux ($I_{\rm pol}$) can then be expressed in terms of the intrins
 I_{\rm pol} = \sqrt{(Q_{\rm in}^{\rm tot})^2+(U_{\rm in}^{\rm tot})^2} = J_{\perp}^{\rm tot} - J_{\parallel}^{\rm tot} ,\ \rm and
 \end{eqnarray}
 \begin{equation} \label{eq_I_tot}
-    I_{\rm tot} = J_{\perp}^{\rm tot} + J_{\parallel}^{\rm tot} 
+    I_{\rm tot} = \int_0^L (J_{\perp}^{\rm l} + J_{\parallel}^{\rm l}) \rm{d}l
 \end{equation}
 $I_{\rm tot}$ is computed by summing the contributions of $J_{\perp}^l$ and and $J_{\parallel}^l$ for each point along the line of sight. 
-% \Andrew{I don't think you give the reader sufficient information here. How $I_{\rm tot}$ is obtained (simple summing from each shell) needs explaining.}
+% \Andrew{NEEDS STATING IN A MATHEMATIC LANGUAGE.}
 $J_{\perp}^{\rm tot}$ and $J_{\parallel}^{\rm tot}$ are the resultant magnitudes of emissions in perpendicular and parallel directions and can be given by:
 \begin{eqnarray}
 J_{\perp}^{\rm tot} = (I_{\rm tot} + I_{\rm pol})/2 \\
 J_{\parallel}^{\rm tot} = (I_{\rm tot} - I_{\rm pol})/2 
 \end{eqnarray}
-In appendix(\ref{Appendix_A}) we explain in detail the relation between these equations with two simplified cases.
 The intrinsic polarisation angle $\Psi_{\rm in}$ is the resulting angle of polarisation.%\Andrew{This doesn't sound right- this angle describe the angle of the results polarised emission direction wrt Galactic south, not the "local magnetic field component" direction}:
 \begin{eqnarray}
 \tan(2\Psi_{\rm in}) = \frac{U_{\rm in}^{\rm tot}}{Q_{\rm in}^{\rm tot}} 
 \end{eqnarray}
+In appendix(\ref{Appendix_A}) we explain in detail the relation between these equations with two simplified cases.
 
 %% Details of simulation like scanning range, cuts etc
 \subsection{Simulation setup for the polarised synchrotron emission}
@@ -367,13 +367,17 @@ It can be seen that the best fit and lower extreme parameters can clearly help i
 \includegraphics[width=0.49\linewidth]{Images/Log_Bins_180_Historgam_LB_N2_Str_Tur_TM_40_EeV.png}
 \includegraphics[width=0.49\linewidth]{Images/Bins_180_LB_N2_CenA_NGC253_Str_Tur_TM_40_EeV.png}\\
 \includegraphics[width=0.49\linewidth]{Images/Log_Bins_180_Historgam_UB_N2_Str_Tur_TM_40_EeV.png}
-\includegraphics[width=0.49\linewidth]{Images/Bins_180_UB_N2_CenA_NGC253_Str_Tur_TM_40_EeV.png}
-\includegraphics[width=0.49\linewidth]{Images/Colorbar.png}
-\caption{Log brightness of the backtracked positions for cosmic rays shown on \textbf{left} and the arrival directions of the cosmic rays from two known sources Cen A and NGC 253 on \textbf{right} (From table~\ref{Para_table} \textbf{Top} - Best Fit Parameters, {\textbf{Middle} - Lower extreme parameters)} \& {\textbf{Bottom} - Upper extreme parameters, we use $R_{\rm Mag} = $ 20~kpc since that is the maximum extent of the magnetic fields in our simulation.}}
+\includegraphics[width=0.49\linewidth]{Images/Bins_180_UB_N2_CenA_NGC253_Str_Tur_TM_40_EeV.png}\
+\hspace*{+9cm}                                      \includegraphics[width=0.40\linewidth]{Images/Colorbar.png}
+\vspace*{0.001mm}
+\caption{Log brightness of the backtracked positions for cosmic rays shown on \textbf{left} and the arrival directions of the cosmic rays from two known sources Cen A and NGC 253 on \textbf{right} (From table~\ref{Para_table} \textbf{Top} - Best Fit Parameters, {\textbf{Middle} - Lower extreme parameters)} \& {\textbf{Bottom} - Upper extreme parameters, we use $R_{\rm Mag} = $ 20~kpc since that is the maximum extent of the magnetic fields in our simulation.} \Andrew{BIG LABELS STATING "MAXIMUM" AND "MINIMUM" NEEDS ADDING TO EACH ROW.}}
 \label{fig:AD_Plots}
 \end{figure*}
 %\newpage
-
+% \begin{frame}
+% \hbox{\hspace{-0.5em}
+% \includegraphics[scale=0.6]{Images/Colorbar.png}}
+% \end{frame}
 \section{Conclusions}
 \label{Conclusions}
 
