--- a/references.bib
+++ b/references.bib
@@ -15,6 +15,16 @@ author = {Glennys R. Farrar},
 keywords = {UHECR, Galactic magnetic field, Magnetic deflections, RCUHE, Champs magnétique galactique, Déflexions magnétiques},
 abstract = {Our understanding of the Galactic magnetic field (GMF) has increased considerably in recent years, while at the same time remaining far from adequate. By way of illustration, the Jansson and Farrar (2012) (JF12) GMF model is described, emphasizing how it is constrained and which features are robust or likely to change, as modeling and constraining data improve. The most urgent requirements for the next phase of modeling are a more realistic model for the relativistic electron distribution (in order to reduce the systematic error associated with interpreting synchrotron data) and a better theoretical understanding of the origin of the large-scale coherent field (in order to develop a better phenomenological parameterization of the field). Even in its current stage of development, the JF12 model allows some important conclusions about UHECR deflections in the GMF to be formulated.}
 }
+
+%% ICRC 2021
+@inproceedings{ICRC_2021,
+author = {Kim, Jihyun and Ivanov, Dmitri and Kawata, Kazumasa and Sagawa, Hiroyuki and Thomson, Gordon},
+year = {2021},
+month = {07},
+pages = {328},
+title = {Hotspot Update, and a new Excess of Events on the Sky Seen by the Telescope Array Experiment},
+doi = {10.22323/1.395.0328}
+}
 %% ICRC 2019
 @article{ICRC_2019,
   author = "Caccianiga, Lorenzo",
