Updates from Overleaf

--- a/references.bib
+++ b/references.bib
@@ -308,6 +308,20 @@ abstract = {Two recent ballon-borne experiments have been performed by the WiZar
   doi = {10.1103/PhysRevLett.78.3610},
   url = {https://link.aps.org/doi/10.1103/PhysRevLett.78.3610}
 }
+%% Drury 2012
+
+@article{Drury_2012,
+   title={Origin of cosmic rays},
+   volume={39-40},
+   ISSN={0927-6505},
+   url={http://dx.doi.org/10.1016/j.astropartphys.2012.02.006},
+   DOI={10.1016/j.astropartphys.2012.02.006},
+   journal={Astroparticle Physics},
+   publisher={Elsevier BV},
+   author={Drury, Luke O’C.},
+   year={2012},
+   month={Dec},
+   pages={52–60} }
 
 
 %% Arjen 2021
@@ -325,7 +339,15 @@ abstract = {Two recent ballon-borne experiments have been performed by the WiZar
    month={Dec},
    pages={1289–1297}
 }
-
+%% Taylor 2019
+@misc{Taylor_2019,
+      title={The Effects of the Galactic Magnetic Field on UHECR From Local Sources}, 
+      author={Andrew M. Taylor and A. M. Hillas},
+      year={2019},
+      eprint={1908.02481},
+      archivePrefix={arXiv},
+      primaryClass={astro-ph.HE}
+}
 %% Beck 2007
 @ARTICLE{Beck_2007,
 AUTHOR = {Beck, R. },
